# tidyflow

./: .gitignore  .swiftlint.yml  AGENTS.md  CHANGELOG.md  COPYING  GIT_LAYER_ANALYSIS.md  GIT_LAYER_QUICK_REFERENCE.md  PROTOCOL_FORMATTER_GUIDE.md  README.md  README.zh-CN.md  RELEASE_CHECKLIST.md  feedback.md
core/: Cargo.toml  README.md
core/benches/: workspace_cache_bench.rs
core/benches/baselines/: hotspot_regression.json
core/src/: lib.rs  main.rs
core/src/ai/: acp_adapter.rs  acp_client.rs  claude_adapter.rs  client.rs  codex_adapter.rs  codex_client.rs  codex_manager.rs  completion_agent.rs  context_usage.rs  copilot_adapter.rs  copilot_client.rs  event_hub.rs  kimi_adapter.rs  manager.rs  mod.rs  session_status.rs
core/src/ai/acp/: adapter.rs  auth.rs  cache.rs  client.rs  metadata_parser.rs  metadata_state.rs  mod.rs  permissions.rs  plan.rs  prompt_builder.rs  prompt_parts.rs  stream_mapping.rs  tool_call.rs  transport.rs
core/src/ai/codex/: adapter.rs  client.rs  manager.rs  mod.rs  question.rs  selection_hint.rs  stream.rs  tool_mapping.rs
core/src/ai/kimi_wire/: agent.rs  client.rs  mod.rs  process.rs  protocol.rs  tests.rs
core/src/ai/opencode/: agent.rs  attachment.rs  http_client.rs  manager.rs  mod.rs  protocol.rs  selection_hint.rs  sse.rs  stream_mapping.rs  usage.rs
core/src/ai/routing/: budget.rs  fallback.rs  mod.rs  policy.rs
core/src/ai/shared/: audio_fallback.rs  json_search.rs  mod.rs  path_norm.rs  request_id.rs
core/src/application/: file.rs  formatting.rs  mod.rs  project.rs  project_admin.rs  project_command.rs  project_workspace.rs  settings.rs  sidebar_status.rs  task.rs  terminal.rs
core/src/coordinator/: consistency.rs  identity.rs  mod.rs  model.rs  snapshot.rs
core/src/perf/: hotspot_guard.rs  mod.rs
core/src/pty/: mod.rs  resize.rs  session.rs
core/src/server/: context.rs  file_api.rs  file_index.rs  git_tools.rs  health.rs  mod.rs  node.rs  perf.rs  protocol.rs  remote_connection_registry.rs  remote_sub_registry.rs  terminal_registry.rs  watcher.rs  ws.rs
core/src/server/git/: branches.rs  commit.rs  integration.rs  mod.rs  operations.rs  sequencer.rs  stash.rs  status.rs  utils.rs
core/src/server/handlers/: evidence.rs  evolution.rs  evolution_prompts.rs  file.rs  git.rs  health.rs  log.rs  lsp.rs  mod.rs  node.rs  project.rs  settings.rs  terminal.rs
core/src/server/lsp/: diagnostics.rs  manager.rs  mod.rs  servers.rs  session.rs  types.rs
core/src/server/protocol/: action_table.rs  action_table_test.rs  ai.rs  ai_session_update_test.rs  domain_table.rs  file.rs  formatting.rs  git.rs  health.rs  mod.rs  node.rs  project.rs  settings.rs  terminal.rs
core/src/server/terminal/: mod.rs
core/src/server/ws/: connection.rs  dispatch.rs  pairing.rs  request_scope.rs  server_runtime.rs  terminal.rs
core/src/util/: file_logger.rs  log.rs  mod.rs  paths.rs  shell_launch.rs
core/src/workspace/: cache_metrics.rs  config.rs  mod.rs  project.rs  setup.rs  sqlite_store.rs  state.rs  state_saver.rs  state_store.rs  workspace.rs
core/tests/: file_content_search.rs  manager_test.rs  protocol_compat_matrix.rs  protocol_unit_tests.rs  protocol_v1.rs  stash_domain_tests.rs  workspace_cache_benchmark_smoke.rs  workspace_unit_tests.rs
(+741 files in other folders)
