[package]
name = "tidyflow-core"
version = "1.3.0"
edition = "2021"
description = "PTY host with WebSocket server for TidyFlow terminal"
license = "LGPL-3.0-only"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.1"
serde_bytes = "0.11"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "v7"] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"
thiserror = "1"
# M1: Workspace Engine
clap = { version = "4", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
petname = "2.0"
# v1.22: File watcher
notify = "6.1"
notify-debouncer-mini = "0.4"
# v1.23: File rename/delete (macOS Trash)
trash = "3"
walkdir = "2"
url = "2"
mime_guess = "2"
# v1.39: 剪贴板图片转码（iOS 粘贴图片到 macOS 剪贴板）
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
# AI Server 进程管理
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1"
async-trait = "0.1.89"
gix = "0.80"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }

[dev-dependencies]
tokio-tungstenite = "0.24"
futures-util = "0.3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
